--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-index.html 
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>المحامي عبدالرحمن مرزوق العتيبي</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Cairo', sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #222;
+    }
+    header {
+      background-color: #1e2a38;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #2e3b4e;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .hero {
+      background-color: #e0e7ef;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 20px;
+      color: #444;
+    }
+    .section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .services, .articles {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 20px;
+    }
+    footer {
+      background-color: #1e2a38;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>المحامي عبدالرحمن مرزوق العتيبي</h1>
+    <p>محامٍ ومستشار قانوني مرخص - خدمات قانونية وأبحاث متخصصة</p>
+  </header>
+  <nav>
+    <a href="#">الرئيسية</a>
+    <a href="#about">من نحن</a>
+    <a href="#services">الخدمات</a>
+    <a href="#articles">المقالات</a>
+    <a href="#contact">اتصل بنا</a>
+  </nav>
+
+  <section class="hero">
+    <h1>أهلاً بكم في منصتي القانونية</h1>
+    <p>نقدم لكم محتوى قانوني موثوق وخدمات مهنية متميزة بكل احترافية وسرية</p>
+  </section>
+
+  <section class="section" id="services">
+    <h2>الخدمات القانونية</h2>
+    <div class="services">
+      <div class="card">استشارات قانونية مكتوبة</div>
+      <div class="card">صياغة العقود ومراجعتها</div>
+      <div class="card">الترافع والتمثيل القضائي</div>
+      <div class="card">تأسيس الشركات والكيانات</div>
+      <div class="card">التحكيم والوساطة</div>
+    </div>
+  </section>
+
+  <section class="section" id="articles">
+    <h2>أحدث المقالات</h2>
+    <div class="articles">
+      <div class="card">التعويض عن الضرر المعنوي - قراءة في أحكام القضاء</div>
+      <div class="card">المسؤولية في الجرائم المعلوماتية</div>
+      <div class="card">تفسير المادة (80) من نظام العمل السعودي</div>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>تواصل معنا</h2>
+    <p>يمكنك مراسلتنا عبر البريد أو نموذج التواصل للحصول على استشارة قانونية.</p>
+  </section>
+
+  <footer>
+    جميع الحقوق محفوظة © المحامي عبدالرحمن مرزوق العتيبي 2025
+  </footer>
+</body>
+</html>
